# cxx_template

./: CMakeLists.txt  CMakePresets.json  Dockerfile  ProjectOptions.cmake  conanfile.py  main.cxx
src/: CMakeLists.txt  hello.cxx  hello.hxx
test/: hello.cxx
